# xezim-core

./: .gitignore  Cargo.toml
src/: elaborate.rs  lib.rs  stdout_sink.rs  value.rs  vcd_sink.rs
src/sdf/: mod.rs
xezim-parser/: Cargo.toml  LICENSE  README.md
xezim-parser/src/: lib.rs  main.rs  tests.rs
xezim-parser/src/ast/: decl.rs  expr.rs  mod.rs  module.rs  stmt.rs  types.rs
xezim-parser/src/diagnostics/: mod.rs
xezim-parser/src/lexer/: mod.rs  scanner.rs  token.rs
xezim-parser/src/parse/: declarations.rs  expressions.rs  helpers.rs  items.rs  mod.rs  statements.rs  types.rs
xezim-parser/src/preprocessor/: mod.rs
xezim-parser/src/serde/: mod.rs
