[package]
name = "xezim-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Shared SystemVerilog elaboration and runtime primitives for xezim and xezim-b"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
rand = "0.8"
sv-parser = { path = "xezim-parser" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[lib]
name = "xezim_core"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
