[package]
name = "sv-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "SystemVerilog parser targeting IEEE 1800-2017/2023"
license = "MIT OR Apache-2.0"
keywords = ["systemverilog", "parser", "hdl", "verilog", "eda"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["serde"]
# Enables Serialize/Deserialize on all AST types. When disabled, the AST
# types are pure data with no serialization trait impls, and `src/serde/`
# helpers are not compiled.
serde = ["dep:serde"]

[lib]
name = "sv_parser"
path = "src/lib.rs"

[[bin]]
name = "sv-parse"
path = "src/main.rs"
